--- a/scripts/install
+++ b/scripts/install
@@ -48,6 +48,7 @@ sudo yunohost app setting jappix language -v $language
 sudo sed -i "s@PATHTOCHANGE@$path@g" ../conf/nginx.conf
 sudo sed -i "s@ALIASTOCHANGE@$final_path/@g" ../conf/nginx.conf
 sudo cp ../conf/nginx.conf /etc/nginx/conf.d/$domain.d/jappix.conf
+sudo mkdir $final_path/store/conf
 sudo cp ../conf/main.xml $final_path/store/conf/main.xml
 sudo cp ../conf/hosts.xml $final_path/store/conf/hosts.xml
 sudo sed -i "s@PATHTOCHANGE@$path@g" $final_path/store/conf/main.xml
