--- a/scripts/install
+++ b/scripts/install
@@ -57,6 +57,7 @@ sudo sed -i "s@DOMAINTOCHANGE@$domain@g" $final_path/store/conf/main.xml
 sudo sed -i "s@CHANGELANG@$language@g" $final_path/store/conf/main.xml
 sudo sed -i "s@CHANGENAME@$name@g" $final_path/store/conf/main.xml
 sudo sed -i "s@DOMAINTOCHANGE@$domain@g" $final_path/store/conf/hosts.xml
+sudo cp ../conf/installed.xml $final_path/store/conf/installed.xml
 
 # Reload Nginx and regenerate SSOwat conf
 sudo service nginx reload
